--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>demo</title>
   </head>
-  <body>
+  <body style="padding:0;margin:0;background-color:#f2f2f2;">
     <noscript>
       <strong>We're sorry but 'demo' doesn't work properly without JavaScript enabled. Please enable it to
         continue.</strong>
